force-app/main/default/objects/AppUser__x/AppUser__x.object-meta.xml
<CustomObject>
    <externalDataSource>Heroku_Postgres</externalDataSource>
    <externalName>public$xm_user</externalName>
    <label>AppUser</label>
    <pluralLabel>AppUsers</pluralLabel>
</CustomObject>