force-app/main/default/objects/AppUser__x/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <externalDeveloperName>email_address</externalDeveloperName>
    <label>Email</label>
    <type>Email</type>
</CustomField>