force-app/main/default/objects/AppUser__x/fields/Fullname__c.field-meta.xml
<CustomField>
    <fullName>Fullname__c</fullName>
    <externalDeveloperName>name</externalDeveloperName>
    <label>Fullname</label>
    <length>50</length>
    <type>Text</type>
</CustomField>