force-app/main/default/objects/AppUser__x/fields/Last_Login__c.field-meta.xml
<CustomField>
    <fullName>Last_Login__c</fullName>
    <externalDeveloperName>last_login</externalDeveloperName>
    <label>Last Login</label>
    <type>DateTime</type>
</CustomField>