force-app/main/default/objects/AppUser__x/fields/Logged_Externally__c.field-meta.xml
<CustomField>
    <fullName>Logged_Externally__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>is_logged_externally</externalDeveloperName>
    <label>Logged Externally</label>
    <type>Checkbox</type>
</CustomField>