force-app/main/default/objects/AppUser__x/fields/Role_Code__c.field-meta.xml
<CustomField>
    <fullName>Role_Code__c</fullName>
    <externalDeveloperName>role_code</externalDeveloperName>
    <label>Role Code</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>