force-app/main/default/objects/AppUser__x/fields/User_Id__c.field-meta.xml
<CustomField>
    <fullName>User_Id__c</fullName>
    <externalDeveloperName>user_id</externalDeveloperName>
    <label>User Id</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>