force-app/main/default/objects/AppUser__x/listViews/Inactive_Users.listView-meta.xml
<ListView>
    <fullName>Inactive_Users</fullName>
    <columns>ExternalId</columns>
    <columns>Fullname__c</columns>
    <columns>Username__c</columns>
    <columns>Last_Login__c</columns>
    <columns>Logged_Externally__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Active__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Inactive Users</label>
    <sharedTo>
        <group>Administration</group>
    </sharedTo>
</ListView>