force-app/main/default/objects/AppUser__x/listViews/Logged_in_Today.listView-meta.xml
<ListView>
    <fullName>Logged_in_Today</fullName>
    <columns>ExternalId</columns>
    <columns>Name__c</columns>
    <columns>Username__c</columns>
    <columns>Last_Login__c</columns>
    <columns>Logged_Externally__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Last_Login__c</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <filters>
        <field>Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Logged in - Today</label>
    <sharedTo>
        <group>Administration</group>
    </sharedTo>
</ListView>